--- a/service-gateway-dev.properties
+++ b/service-gateway-dev.properties
@@ -2,7 +2,7 @@ server.port=8000
 
 spring.cloud.gateway.routes[0].id=service-admin
 spring.cloud.gateway.routes[0].uri=lb://SERVICE-ADMIN
-spring.cloud.gateway.routes[0].predicates[0]=Path=/v1/buses/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/v1/admin/buses/**
 
 spring.cloud.gateway.routes[1].id=service-bus
 spring.cloud.gateway.routes[1].uri=lb://SERVICE-BUS
