modified admin dev profile

--- a/service-admin-dev.properties
+++ b/service-admin-dev.properties
@@ -1,4 +1,4 @@
-server.port = 8080
+server.port = 0
 
 spring.datasource.url:jdbc:mysql://localhost:3306/service_admin
 spring.datasource.username=root
@@ -7,3 +7,29 @@ spring.datasource.password=venky5085
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+management.health.circuitbreakers.enabled=true
+management.health.ratelimiters.enabled=true
+
+resilience4j.circuitbreaker.instances.busServiceCircuitBreaker.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.busServiceCircuitBreaker.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.busServiceCircuitBreaker.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.busServiceCircuitBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.busServiceCircuitBreaker.waitDurationInOpenState=10000
+
+resilience4j.retry.instances.busServiceRetry.maxAttempts=3
+resilience4j.retry.instances.busServiceRetry.waitDuration=2s
+
+resilience4j.ratelimiter.instances.busServiceRateLimiter.limitForPeriod=5
+resilience4j.ratelimiter.instances.busServiceRateLimiter.limitRefreshPeriod=10s
+resilience4j.ratelimiter.instances.busServiceRateLimiter.timeoutDuration=0
+
+resilience4j.timelimiter.instances.busServiceTimeLimiter.timeoutDuration=3s
+resilience4j.timelimiter.instances.busServiceTimeLimiter.cancelRunningFuture=true
+
+
+logging.level.io.github.resilience4j.retry=DEBUG
+
