--- a/service-gateway-dev.properties
+++ b/service-gateway-dev.properties
@@ -1,5 +1,11 @@
 server.port=8000
 
+logging.level.org.springframework.cloud.gateway=debug
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+
 spring.cloud.gateway.routes[0].id=service-admin
 spring.cloud.gateway.routes[0].uri=lb://SERVICE-ADMIN
 spring.cloud.gateway.routes[0].predicates[0]=Path=/v1/admin/buses/**
